# settings

./: .gitignore
Data/Settings/bash/: _bashrc
Data/Settings/bash/_bash_files/: default.sh
Data/Settings/emacs/: _emacs
Data/Settings/emacs/_emacs_files/: functions.lisp  modes.lisp  packages.lisp  settings.lisp  (+1 more)
Notes/: Makefile  notes.tex
Notes/attach/bash/: chmod_cmds  helpme_cmds
Notes/attach/c_project/: CMakeLists.txt
Notes/attach/c_project/src/: CMakeLists.txt  constants.c  files.c  main.c  program.h  wingetopt.c  wingetopt.h
Notes/attach/c_project_2/src/test/test_2/: CMakeLists.txt  main.c
Notes/attach/korein/: korein_cmds
Notes/attach/python_syntax/: Makefile  python_syntax.tex
Notes/lib/: settings.tex
bash/: _bashrc
bash/_bash_dir/: bash_aliases.sh  bash_misc.sh  bash_trya.sh
emacs/: _emacs
emacs/_emacs-dir/: modes.el  settings.el  shortcuts.el
emacs/_emacs-dir/modes/: dockercompose.el  dockerfile.el  s.el  typescript.el  yaml.el
emacs/_emacs_dir/: modes.lisp  packages.lisp  settings.lisp  shortcuts.lisp
emacs/_emacs_dir/modes/: dircolor.el  general.el  long-lines.el
git/: _gitconfig
input/: _inputrc
manual/: Makefile
manual/attach/bash/: helpme_cmds
manual/attach/korein/: korein_cmds
manual/attach/latex_docs/: article.tex  code.tex  slide.tex
manual/attach/python_c/: file.c  file.i  test.py
manual/lib/: commands.tex  settings.tex
script/: ff  fff  import.sh  rm-all  rs  rss
script/python/: bash-settings  common.py  cp-local-to-korein  cp-mitchell-to-local  empty-trash  fd  helpme-file  latex-code  latex-slide-tex  latexmkclean  manual-pdf  script-up
settings/bash/: _bashrc
settings/bash/_bash_dir/: bash_aliases.sh
settings/bash/bash/: default.sh
settings/emacs/: _emacs
settings/emacs/_emacs_dir/: flycheck.lisp  functions.lisp  indentation.lisp  modes.lisp  settings.lisp  shortcuts.lisp
settings/emacs/emacs/: flycheck.lisp  flymake.lisp  modes.lisp
settings/git/: _gitconfig
settings/input/: _inputrc
settings/latex/texmf/: ls-R
settings/script/python/: bash-up  cluster-cmd  cluster-cmd-file  common-file  common.py  cp-korein-to-local  cp-local-to-korein  cp-local-to-mitchell  emacs-modes  emacs-settings  ff  find-all-files  find-file  find-string  fs  helpme  latex-article  latex-article-tex  latex-code-tex  latex-slide  manual-compile  manual-pdf  manual-tex  pdflatexclean  read-string  rm-all  rs  sub
ssh/: config
tmp/: bashrc
vim/: _vimrc
(+102 files in other folders)
